# Efanov_projects

./: README.md
client_server/: CMakeLists.txt  readme.md
client_server/client/: CMakeLists.txt
client_server/client/src/: CMakeLists.txt  main.c
client_server/common/: CMakeLists.txt
client_server/common/include/: common.h
client_server/common/src/: CMakeLists.txt
client_server/server/include/: client.h  server.h
client_server/server/src/: CMakeLists.txt  client.c  main.c  server.c
cross_proc_com/: CMakeLists.txt  bar.ipynb  readme.md
cross_proc_com/FIFO_com/: CMakeLists.txt
cross_proc_com/msg_com/: CMakeLists.txt
cross_proc_com/shmem_com/: CMakeLists.txt
demon/: CMakeLists.txt
demon/include/: config.h  demon.h  utils.h
demon/src/: CMakeLists.txt  config.c  demon.c  main.c  utils.c
monte_carlo_threads/: CMakeLists.txt
monte_carlo_threads/include/: config.h  function.h  monte_carlo.h
monte_carlo_threads/src/: function.c  main.c  monte_carlo.c
network_parallelization/: CMakeLists.txt
network_parallelization/client/: CMakeLists.txt
network_parallelization/client/include/: client.h
network_parallelization/client/src/: CMakeLists.txt  client.c  main.c
network_parallelization/common/include/: buffer.h  common.h  integral.h
network_parallelization/common/src/: CMakeLists.txt  buffer.c  integral.c
network_parallelization/server/: CMakeLists.txt
network_parallelization/server/include/: sever.h
network_parallelization/server/src/: CMakeLists.txt  main.c  sever.c
signal_com/: CMakeLists.txt
signal_com/include/: child.h
(+7 files in other folders)
